--- a/mylist.html
+++ b/mylist.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-    <title>Заголовок моей страницы</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
+    <title>Зfголовочек моей страницы</title>
+    <link href="https://fonts.googleapis.com/css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
